[tool.poetry]
name = "aiogram-scenes-example-chatsettings"
version = "0.1.0"
description = ""
authors = ["andrew000 <11490628+andrew000@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = {version = "3.9.5", extras = ["speedups"]}
aiogram = "3.8.0"
asyncpg = "0.29.0"
msgspec = "0.18.6"
redis = {version = "5.0.6", extras = ["hiredis"]}
sqlalchemy = {version = "2.0.31", extras = ["asyncio"]}
pydantic-settings = "2.3.3"
pytz = "2024.1"

[tool.poetry.dev-dependencies]
black = "24.4.2"
isort = "5.13.2"
pre-commit = "3.7.1"
ruff = "0.4.9"
libcst = "1.4.0"

[tool.poetry.group.uvloop.dependencies]
uvloop = {version = "0.19.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
